welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.error
BaggleSeeker:2: error: not found: value estsurbiscuit
while(!estsurbiscuit()){
       ^BaggleSeeker:3: error: not found: value avace
	avace()
        ^